--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problema de los filosofos comensales</title>
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
     <div class="contenedor">
             <div id="mesa">
             </div>
     </div>
-    <script type="module"  src="/src/js/index.js"></script>
+    <script type="module"  src="src/js/index.js"></script>
 </body>
 </html>
